# Praxis-API

./: .env.example  .gitignore  LICENSE  Makefile  README.md  SECURITY.md  lefthook.yml  package-lock.json  package.json
services/ai-agents/: .dockerignore  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
services/ai-agents/app/: composition_root.py  main.py
services/ai-agents/app/application/: dtos.py
services/ai-agents/app/application/services/: _chunker.py  _errors.py  capabilities_service.py  content_reference_lookup_service.py  files_service.py  knowledge_service.py  threads_service.py  turns_service.py
services/ai-agents/app/application/use_cases/: create_agent.py  list_user_agents.py  provision_default_agent.py
services/ai-agents/app/domain/: memory_settings.py
services/ai-agents/app/domain/IRepos/: i_thread_repo.py
services/ai-agents/app/domain/IServices/: i_capabilities_service.py  i_files_service.py  i_knowledge_service.py  i_threads_service.py
services/ai-agents/app/domain/dtos/: capability_dto.py  content_reference_dto.py  file_dto.py  knowledge_dto.py  thread_dto.py
services/ai-agents/app/domain/entities/: agent.py
services/ai-agents/app/domain/events/: conversation_events.py
services/ai-agents/app/domain/ports/: agent_repository.py  content_reference_lookup.py  document_extractor.py  embedding_client.py  event_consumer.py  event_publisher.py  i_memory_client.py  i_projects_client.py  logger.py  vector_store.py
services/ai-agents/app/domain/shared/: aggregate_root.py  domain_event.py  exceptions.py  result.py
services/ai-agents/app/domain/value_objects/: agent_name.py  identifiers.py
services/ai-agents/app/infrastructure/agentic/: agentic_store.py
services/ai-agents/app/infrastructure/ai/: title_generator.py
services/ai-agents/app/infrastructure/cache/: event_stream.py
services/ai-agents/app/infrastructure/config/: env.py
services/ai-agents/app/infrastructure/documents/: document_extractor.py
services/ai-agents/app/infrastructure/files/: file_storage.py
services/ai-agents/app/infrastructure/llm/: attachment_captioner.py  embedding_client.py  litellm_client.py
services/ai-agents/app/infrastructure/logging/: structlog_logger.py
services/ai-agents/app/infrastructure/memory/: http_memory_client.py
services/ai-agents/app/infrastructure/messaging/: kafka_event_consumer.py  kafka_event_publisher.py
services/ai-agents/app/infrastructure/persistence/: agent_mapper.py  migrations.py  postgres_agent_repository.py  postgres_connection.py
services/ai-agents/app/infrastructure/projects/: http_projects_client.py
services/ai-agents/app/infrastructure/vector/: in_memory_vector_store.py  qdrant_vector_store.py
services/ai-agents/app/presentation/controllers/: agents_runs_controller.py  capabilities_controller.py  files_controller.py  health_controller.py  threads_controller.py  turns_controller.py
services/ai-agents/app/presentation/di/: container.py
services/ai-agents/app/presentation/http/: dependencies.py  result_mapper.py  ws_connection_registry.py
services/ai-agents/app/presentation/routes/: agents_runs_route.py  agents_ws_route.py  base_route.py  capabilities_route.py  files_route.py  health_route.py  notifications_ws_route.py  threads_route.py  turns_route.py
services/ai-agents/migrations/: env.py  script.py.mako
services/ai-agents/migrations/versions/: 20240101_0001_initial_schema.py  20240601_0002_outbox_and_processed_events.py
services/ai-agents/tests/application/: test_agent_registry.py  test_agent_spec.py  test_agent_tools.py  test_attachment_preload.py  test_base_agent.py  test_capabilities_service.py  test_compaction_cutoff.py  test_content_reference_scanner.py  test_create_agent.py  test_document_extractor.py  test_file_storage.py  test_files_service.py  test_history_preload_filter.py  test_in_memory_vector_store.py  test_knowledge_service.py  test_list_user_agents.py  test_litellm_client.py  test_middleware_imports.py  test_preload_aliases.py  test_provision_default_agent.py  test_react_agent_boundary.py  test_run_manager.py  test_thread_config.py  test_turns_service.py
services/ai-agents/tests/application/fixture_agents/: alpha_agent.py  bravo_agent.py
services/ai-agents/tests/domain/: test_agent.py  test_agent_name.py  test_identifiers.py
services/ai-agents/tests/helpers/: fakes.py
services/ai-agents/tests/infrastructure/: test_kafka_backoff.py
services/ai-agents/tests/presentation/: test_files_content_headers.py  test_ws_connection_registry.py
services/memory/: Dockerfile  pyproject.toml
services/memory/app/: main.py
services/memory/app/application/: memory_service.py
services/memory/app/domain/: entity_types.py  settings.py
services/memory/app/domain/ports/: entity_provisioner.py  event_consumer.py  logger.py  memory_store.py
services/memory/app/infrastructure/config/: env.py
services/memory/app/infrastructure/entity_provisioners/: __init__.py  conversation_deleted_provisioner.py  conversation_provisioner.py  conversation_renamed_provisioner.py  user_provisioner.py
services/memory/app/infrastructure/logging/: structlog_logger.py
services/memory/app/infrastructure/memory/: graphiti_store.py
services/memory/app/infrastructure/messaging/: kafka_event_consumer.py
services/memory/app/presentation/: mcp_server.py  schemas.py
services/memory/tests/: test_memory_service.py
services/memory/tests/helpers/: fakes.py
services/projects/: Dockerfile  pyproject.toml
services/projects/app/: main.py
services/projects/app/application/: projects_service.py
services/projects/app/domain/: models.py
services/projects/app/infrastructure/config/: env.py
services/projects/app/presentation/: schemas.py
services/projects/tests/: test_projects_service.py
services/sandbox/: Dockerfile  desktop.Dockerfile  praxis  pyproject.toml
services/sandbox/app/: main.py
services/sandbox/app/application/: sandbox_service.py
services/sandbox/app/domain/: templates.py  workspace.py
services/sandbox/app/presentation/: schemas.py
services/sandbox/tests/: test_smoke.py
(+285 files in other folders)
