[project]
name = "ai-agents-service"
version = "0.1.0"
description = "AI agents service: agent definitions, runs, LLM orchestration."
requires-python = ">=3.11,<3.14"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic==2.10.5",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "python-multipart==0.0.18",
  "aiokafka==0.10.0",
  "langgraph>=1.0.5",
  "langgraph-checkpoint-postgres",
  "psycopg[binary,pool]==3.2.3",
  "asyncpg>=0.31.0",
  "langchain>=1.2.0",
  "langchain-core>=1.2.4",
  "langchain-openai>=1.2.1",
  "redis[hiredis]==5.0.8",
  "structlog==24.1.0",
  "httpx==0.27.0",
  "setuptools==70.0.0",
  "opentelemetry-distro>=0.46b0",
  "opentelemetry-exporter-otlp-proto-http>=1.25.0",
  "opentelemetry-instrumentation-fastapi==0.63b1",
  "opentelemetry-instrumentation-psycopg>=0.46b0",
  "opentelemetry-instrumentation-logging>=0.46b0",
  # PDF text extraction (pure-Python — no binary deps, ships in the wheel).
  # `pypdf` is the maintained successor to `PyPDF2`. We only need text
  # extraction, not rendering, so the small surface fits.
  "pypdf>=4.0.0",
  # Vector store — pinned to the v1 client, sync HTTP under the hood.
  # `qdrant-client[fastembed]` would also bundle a local embedding
  # backend, but we route embeddings through the LiteLLM proxy so we
  # don't need fastembed in this service.
  "qdrant-client>=1.10.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.2.0",
  "pytest-asyncio==0.23.6",
  "ruff==0.4.4",
  "mypy==1.10.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
