[project]
name = "projects-service"
version = "0.1.0"
description = "Projects service: project management, GitHub token encryption, sandbox assignment."
requires-python = ">=3.11,<3.13"
dependencies = [
  "fastapi==0.111.0",
  "uvicorn[standard]==0.29.0",
  "pydantic>=2.10.5",
  "pydantic-settings==2.7.1",
  "python-dotenv==1.0.1",
  "sqlalchemy[asyncio]==2.0.36",
  "asyncpg>=0.31.0",
  "alembic==1.13.3",
  "python-jose[cryptography]==3.3.0",
  "cryptography>=42.0.0",
  "httpx==0.27.0",
  "aiokafka==0.10.0",
  "structlog==25.5.0",
  "opentelemetry-distro>=0.46b0",
  "opentelemetry-exporter-otlp-proto-http>=1.25.0",
  "opentelemetry-instrumentation-fastapi==0.63b1",
  "opentelemetry-instrumentation-sqlalchemy>=0.46b0",
  "opentelemetry-instrumentation-logging>=0.46b0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.4.0",
  "pytest-asyncio==1.4.0",
  "ruff==0.4.4",
  "mypy==2.1.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
